# Broadside-AI

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_CO.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  llms.txt  pyproject.toml
.codecarto/: THREAD_LOG.md
.codecarto/workflow/: .orchestrator.local.yaml  status.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
benchmarks/: README.md  suite.py
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/: RESULTS.md  results.json
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/analytical_comparison/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/classification/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/code_review/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/creative_pitch/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/claude-sonnet-4-20250514_3agents_20260330_014156/summarization/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/deepseek-v3.2_3agents_20260330_015429/: RESULTS.md  results.json
benchmarks/results/deepseek-v3.2_3agents_20260330_015429/analytical_comparison/: agent_1.txt  agent_2.txt  agent_3.txt  sequential_baseline.txt  summary.json
benchmarks/results/deepseek-v3.2_3agents_20260330_015429/classification/: agent_1.txt  (+4 more)
benchmarks/results/gemma3-1b_3agents_20260330_021821/: RESULTS.md  results.json
benchmarks/results/nemotron-3-super_3agents_20260330_012141/: RESULTS.md  results.json
broadside_output/claude-sonnet-4-20250514/in-1-paragraph-pitch-the-movie-space-jam_20260330_002351/: agent_1.txt  agent_2.txt  agent_3.txt  agent_4.txt  agent_5.txt  result.json  synthesis.txt
broadside_output/claude-sonnet-4-20250514/write-a-poem-about-odins-raven-huggin_20260330_024606/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/gemma3-1b/write-a-poem-about-odins-ravens_20260330_022645/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/gpt-oss-120b/write-a-pitch-for-a-dotfile-manager_20260329_235253/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/nemotron-3-super/write-a-pitch-for-a-dotfile-manager_20260329_235511/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/nemotron-3-super/write-a-pitch-for-a-dotfile-manager_20260330_023436/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/nemotron-3-super/write-a-pitch-for-broadside-a-python-fra_20260329_235830/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/nemotron-3-super/write-a-pitch-for-building-a-tree-fort_20260330_030927/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
broadside_output/nemotron-3-super/write-a-poem-about-odins-raven-huginn_20260330_023617/: agent_1.txt  agent_2.txt  agent_3.txt  result.json  synthesis.txt
examples/: quickstart.py  quickstart_task.yaml
pytest-cache-files-ujpp93wk/v/cache/: nodeids
src/broadside/: __init__.py  __main__.py  benchmark.py  budget.py  cli.py  conflicts.py  gather.py  run.py  scatter.py  synthesize.py  task.py  task_validator.py
src/broadside/backends/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/broadside/checkpoints/: __init__.py
src/broadside/strategies/: consensus.py  voting.py
src/broadside_ai/: __init__.py  __main__.py  benchmark.py  budget.py  cli.py  conflicts.py  execution.py  gather.py  parsing.py  quality.py  run.py  scatter.py  synthesize.py  task.py  task_validator.py
src/broadside_ai/backends/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/broadside_ai/checkpoints/: __init__.py
src/broadside_ai/strategies/: __init__.py  consensus.py  voting.py  weighted_merge.py
tasks/: README.md  _template.yaml  architecture_summary.yaml  code_review.yaml  database_comparison.yaml  product_pitch.yaml  ticket_classification.yaml
tests/: conftest.py  test_budget.py  test_checkpoints.py  test_cli.py  test_conflicts.py  test_consensus.py  test_execution.py  test_gather.py  test_integration.py  test_parsing.py  test_quality.py  test_synthesize.py  test_task.py  test_voting.py  test_weighted_merge.py
tools/: clean.py  smoke_dist_install.py
(+65 files in other folders)
